Fix missing color for buttons.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -488,6 +488,7 @@ ol.values, ol.payment_options
     font-family: "Arial Black"
     text-shadow: 0 -1px 0 black
     border: 1px solid $orange
+    background: $vermillion
     +border-radius(6px)
     +background-image(linear-gradient(lighten($orange,5%), $vermillion))
     +transition(.2s)
